--- a/TestingPackage/Sample/Testing.Sample.asmdef
+++ b/TestingPackage/Sample/Testing.Sample.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Testing.Moon.Sample",
+    "name": "Testing.Sample",
     "rootNamespace": "",
     "references": [
         "GUID:98672309e15744edb4fb21c855308cac",
